--- a/TestWebProject/WebContent/WEB-INF/web.xml
+++ b/TestWebProject/WebContent/WEB-INF/web.xml
@@ -9,4 +9,12 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>
+  <servlet-name>auth</servlet-name>
+  <servlet-class>org.neojo.servlet.Authcheck</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>auth</servlet-name>
+  <url-pattern>/auth</url-pattern>
+  </servlet-mapping>
 </web-app>
