--- a/TestWebProject/WebContent/WEB-INF/web.xml
+++ b/TestWebProject/WebContent/WEB-INF/web.xml
@@ -23,7 +23,7 @@
   </servlet-mapping>
   <servlet-mapping>
     <servlet-name>reg</servlet-name>
-    <url-pattern>*.reg</url-pattern>
+    <url-pattern>/reg</url-pattern>
   </servlet-mapping>
 
 </web-app>
